// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin should get all user when querying for users 1`] = `
Array [
  Object {
    "email": "john@doe.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
  Object {
    "email": "jane@doe.com",
    "firstName": "Jane",
    "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    "isAdmin": true,
    "lastName": "Doe",
  },
  Object {
    "email": "jake@doe.com",
    "firstName": "Jake",
    "id": "93ff8f707d26a6afeb1796e4b49d9ba8775330ed9b8c5df98b7449ec9c501246",
    "isAdmin": true,
    "lastName": "Doe",
  },
]
`;

exports[`Admin should get any user when querying for a specific user 1`] = `
Object {
  "email": "john@doe.com",
  "firstName": "John",
  "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
  "isAdmin": false,
  "lastName": "Doe",
}
`;

exports[`Admin should get himself when querying for a specific user 1`] = `
Object {
  "email": "jane@doe.com",
  "firstName": "Jane",
  "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
  "isAdmin": true,
  "lastName": "Doe",
}
`;

exports[`Admin should remove owner of domain by deleting a user 1`] = `
Object {
  "domain": Object {
    "activeQuestion": null,
    "activeSurvey": Object {
      "id": "c9f789ae90d2a491f15794da7c7de88cd4f9fc267eee0112fa4cc947d25f7ae3",
      "questions": Array [
        Object {
          "id": "f0a5499c989ef2579982d362d8c374ec3c6f9f3ec34ee0a9204b58b26f616219",
          "value": "Wie gefallen Ihnen diese Kirschen?",
        },
        Object {
          "id": "5f98baec8f2b489c8e87eab79f7adf490f54e3b08f7878599d77164124ad1795",
          "value": "Essen Sie gerne Obst?",
        },
        Object {
          "id": "544920d8dc19d59ca0fdeaeff0f127935d490d31e6c9147223489168d963bf8f",
          "value": "Wie viel geben Sie für Obst in der Woche aus?",
        },
        Object {
          "id": "495103000d697a14339dfa1ad261e234ff885239e9e3b4b95a7d5f45e9d90cb6",
          "value": "Wie viel Obst essen Sie am Tag?",
        },
        Object {
          "id": "979eb275a748639d3d57f563cf2879c836f4166cd323fc42ce3e0f81936ed192",
          "value": "Was ist ihr Lieblingsobst?",
        },
        Object {
          "id": "1b6cdfb57ded968d69ffe801a6b184118861bce82906cce0c0b9e53f40e8cd8e",
          "value": "Welches Obst essen Sie am häufigsten?",
        },
      ],
      "title": "Umfrage zum Konsumverhalten von Obst",
    },
    "clients": Array [
      Object {
        "id": "61b9c12fb4409fda98fa7ab11e0d13e94a4fce60330a7838cecf5700abdc51f3",
        "name": "Markttablet",
      },
      Object {
        "id": "738337c86e14983a8eb7358374b31474b07257ea1ec38833b1078be7d79fb0d6",
        "name": "Litfaßsäule am Markt",
      },
      Object {
        "id": "b69535f2e186137accbd21e73f8965b8274ded7f36fc014afd46b0c526d9cd0a",
        "name": "Temporary Client",
      },
    ],
    "id": "495b1a7b6cfca552428759780117761c164310b6557c3f06e4357fafc8cb4453",
    "isPublic": true,
    "name": "Kölner Markt",
    "owners": Array [
      Object {
        "firstName": "Jane",
        "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
      },
      Object {
        "firstName": "John",
        "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
      },
    ],
    "states": Array [
      Object {
        "key": "link",
        "value": "https://www.stadt-koeln.de/",
      },
    ],
  },
}
`;

exports[`Admin should remove owner of domain by deleting a user 2`] = `
Object {
  "activeQuestion": null,
  "activeSurvey": null,
  "clients": null,
  "id": "495b1a7b6cfca552428759780117761c164310b6557c3f06e4357fafc8cb4453",
  "isPublic": true,
  "name": "Kölner Markt",
  "owners": Array [
    Object {
      "firstName": "Jane",
      "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    },
  ],
  "states": Array [
    Object {
      "key": "link",
      "value": "https://www.stadt-koeln.de/",
    },
  ],
}
`;

exports[`Admin should update email of himself 1`] = `
Object {
  "user": Object {
    "email": "new@mail.com",
    "firstName": "Jane",
    "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    "isAdmin": true,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update email of other user 1`] = `
Object {
  "user": Object {
    "email": "new@mail.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update firstName of himself 1`] = `
Object {
  "user": Object {
    "email": "jane@doe.com",
    "firstName": "newName",
    "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    "isAdmin": true,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update firstName of other user 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "newName",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update isAdmin of himself 1`] = `
Object {
  "user": Object {
    "email": "jane@doe.com",
    "firstName": "Jane",
    "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    "isAdmin": false,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update isAdmin of other user 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": true,
    "lastName": "Doe",
  },
}
`;

exports[`Admin should update lastName of himself 1`] = `
Object {
  "user": Object {
    "email": "jane@doe.com",
    "firstName": "Jane",
    "id": "bb9b812794666578a86254afca49deef281fd5caf4566db9915cf4d5ecde53dd",
    "isAdmin": true,
    "lastName": "newName",
  },
}
`;

exports[`Admin should update lastName of other user 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "John",
    "id": "bb4028c0657dfd7092f316dcbf5b006dce87217141e1b974441f040126acc142",
    "isAdmin": false,
    "lastName": "newName",
  },
}
`;
